updated home page updated login html

--- a/libs/feature/lazy/home/src/lib/home-page/home-page.component.html
+++ b/libs/feature/lazy/home/src/lib/home-page/home-page.component.html
@@ -1,1 +1,31 @@
-<p>home-page works!</p>
+<p>
+	Agromanager - A Tool you can rely on.
+</p>
+<p>
+	Helping everyone work smarter on the farm.
+</p>
+<p>
+	Helping you work with the best information and most up to date data.
+</p>
+
+<hr />
+
+<span>Animals | </span>
+<span>Land | </span>
+<span>Weather | </span>
+<span>Equipment | </span>
+<span>Infrasturcture | </span>
+<span>Human Resources | </span>
+<span>Inventory | </span>
+<span>Finance | </span>
+
+<hr />
+
+<p>
+	Stats
+</p>
+
+<hr />
+<p>
+	Mailing List
+</p>
