Added additional documentation Separated app routing to another module Added dashboard feature page Added animals feature page

--- a/documentation/components/LoginPageComponent.html
+++ b/documentation/components/LoginPageComponent.html
@@ -195,8 +195,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="12"
-                            class="link-to-prism">libs/feature/lazy/login/src/lib/login-page/login-page.component.ts:12</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="11"
+                            class="link-to-prism">libs/feature/lazy/login/src/lib/login-page/login-page.component.ts:11</a></div>
                 </td>
             </tr>
 
@@ -218,20 +218,17 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, OnInit } from &#x27;@angular/core&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {Component, OnInit} from &#x27;@angular/core&#x27;;
 
 @Component({
-  selector: &#x27;agromanager-login-page&#x27;,
-  templateUrl: &#x27;./login-page.component.html&#x27;,
-  styleUrls: [&#x27;./login-page.component.scss&#x27;]
+	selector: &#x27;agromanager-login-page&#x27;,
+	templateUrl: &#x27;./login-page.component.html&#x27;,
+	styleUrls: [&#x27;./login-page.component.scss&#x27;],
 })
 export class LoginPageComponent implements OnInit {
+	constructor() {}
 
-  constructor() { }
-
-  ngOnInit(): void {
-  }
-
+	ngOnInit(): void {}
 }
 </code></pre>
     </div>
@@ -313,7 +310,7 @@ export class LoginPageComponent implements OnInit {
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
         var COMPONENT_TEMPLATE = '<div><div class="login-container">	<div class="ui card login-card">		<div class="content">			<form class="ui form">				<div class="two fields">					<div class="field">						<label>First Name</label>						<input type="text" name="firstName" placeholder="First Name" />					</div>					<div class="field">						<label>Last Name</label>						<input type="text" name="lastName" placeholder="Last Name" />					</div>				</div>				<div class="field">					<label>Email</label>					<input type="email" name="email" placeholder="Email" />				</div>				<div class="field">					<label>Password</label>					<input type="password" name="password" placeholder="Password" />				</div>				<button class="ui primary button login" type="submit">Sign Up</button>			</form>		</div>	</div></div></div>'
-    var COMPONENTS = [{'name': 'AboutPageComponent', 'selector': 'agromanager-about-page'},{'name': 'AppComponent', 'selector': 'agromanager-root'},{'name': 'FooterComponent', 'selector': 'agromanager-footer'},{'name': 'HeaderComponent', 'selector': 'agromanager-header'},{'name': 'HelpPageComponent', 'selector': 'agromanager-help-page'},{'name': 'HomePageComponent', 'selector': 'agromanager-home-page'},{'name': 'LoginPageComponent', 'selector': 'agromanager-login-page'},{'name': 'NavbarComponent', 'selector': 'agromanager-navbar'},{'name': 'ProfilePageComponent', 'selector': 'agromanager-profile-page'},{'name': 'SettingsPageComponent', 'selector': 'agromanager-settings-page'}];
+    var COMPONENTS = [{'name': 'AboutPageComponent', 'selector': 'agromanager-about-page'},{'name': 'AnimalsPageComponent', 'selector': 'agromanager-animals-page'},{'name': 'AppComponent', 'selector': 'agromanager-root'},{'name': 'DashboardPageComponent', 'selector': 'agromanager-dashboard-page'},{'name': 'FooterComponent', 'selector': 'agromanager-footer'},{'name': 'HeaderComponent', 'selector': 'agromanager-header'},{'name': 'HelpPageComponent', 'selector': 'agromanager-help-page'},{'name': 'HomePageComponent', 'selector': 'agromanager-home-page'},{'name': 'LoginPageComponent', 'selector': 'agromanager-login-page'},{'name': 'NavbarComponent', 'selector': 'agromanager-navbar'},{'name': 'ProfilePageComponent', 'selector': 'agromanager-profile-page'},{'name': 'SettingsPageComponent', 'selector': 'agromanager-settings-page'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'LoginPageComponent'};
 </script>
