removed material icon link on html file material icon has being moved to workspace.json under style

--- a/documentation/components/LoginPageComponent.html
+++ b/documentation/components/LoginPageComponent.html
@@ -151,15 +151,45 @@
             <tbody>
                 <tr>
                     <td class="col-md-4">
-<code>constructor()</code>
+<code>constructor(authService: <a href="../injectables/AuthService.html">AuthService</a>)</code>
                     </td>
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="8" class="link-to-prism">libs/feature/lazy/login/src/lib/login-page/login-page.component.ts:8</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="9" class="link-to-prism">libs/feature/lazy/login/src/lib/login-page/login-page.component.ts:9</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                            <div>
+                                    <b>Parameters :</b>
+                                    <table class="params">
+                                        <thead>
+                                            <tr>
+                                                <td>Name</td>
+                                                    <td>Type</td>
+                                                <td>Optional</td>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                                <tr>
+                                                        <td>authService</td>
+                                                  
+                                                        <td>
+                                                                        <code><a href="../injectables/AuthService.html" target="_self" >AuthService</a></code>
+                                                        </td>
+                                                  
+                                                    <td>
+                                                            No
+                                                    </td>
+                                                    
+                                                </tr>
+                                        </tbody>
+                                    </table>
+                            </div>
+                    </td>
+                </tr>
             </tbody>
         </table>
 </section>
@@ -195,8 +225,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="11"
-                            class="link-to-prism">libs/feature/lazy/login/src/lib/login-page/login-page.component.ts:11</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="12"
+                            class="link-to-prism">libs/feature/lazy/login/src/lib/login-page/login-page.component.ts:12</a></div>
                 </td>
             </tr>
 
@@ -219,6 +249,7 @@
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {Component, OnInit} from &#x27;@angular/core&#x27;;
+import {AuthService} from &#x27;@agromanager/feature/api/auth&#x27;;
 
 @Component({
 	selector: &#x27;agromanager-login-page&#x27;,
@@ -226,7 +257,7 @@
 	styleUrls: [&#x27;./login-page.component.scss&#x27;],
 })
 export class LoginPageComponent implements OnInit {
-	constructor() {}
+	constructor(private authService: AuthService) {}
 
 	ngOnInit(): void {}
 }
