--- a/documentation/components/HeaderComponent.html
+++ b/documentation/components/HeaderComponent.html
@@ -121,6 +121,21 @@
     <h3 id="index">Index</h3>
     <table class="table table-sm table-bordered index-table">
         <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <h6><b>Properties</b></h6>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <ul class="index-list">
+                            <li>
+                                    <span class="modifier">Public</span>
+                                <a href="#auth">auth</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
 
                 <tr>
                     <td class="col-md-4">
@@ -151,15 +166,45 @@
             <tbody>
                 <tr>
                     <td class="col-md-4">
-<code>constructor()</code>
+<code>constructor(auth: <a href="../injectables/AuthService.html">AuthService</a>)</code>
                     </td>
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="8" class="link-to-prism">libs/ui-kits/main/src/lib/header/header.component.ts:8</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="9" class="link-to-prism">libs/ui-kits/main/src/lib/header/header.component.ts:9</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                            <div>
+                                    <b>Parameters :</b>
+                                    <table class="params">
+                                        <thead>
+                                            <tr>
+                                                <td>Name</td>
+                                                    <td>Type</td>
+                                                <td>Optional</td>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                                <tr>
+                                                        <td>auth</td>
+                                                  
+                                                        <td>
+                                                                        <code><a href="../injectables/AuthService.html" target="_self" >AuthService</a></code>
+                                                        </td>
+                                                  
+                                                    <td>
+                                                            No
+                                                    </td>
+                                                    
+                                                </tr>
+                                        </tbody>
+                                    </table>
+                            </div>
+                    </td>
+                </tr>
             </tbody>
         </table>
 </section>
@@ -213,25 +258,57 @@
         </tbody>
     </table>
 </section>
+    <section>
+    
+        <h3 id="inputs">
+            Properties
+        </h3>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="auth"></a>
+                        <span class="name">
+                            <b>
+                                <span class="modifier">Public</span>
+                            auth</b>
+                            <a href="#auth"><span class="icon ion-ios-link"></span></a>
+                        </span>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Type : </i>        <code><a href="../injectables/AuthService.html" target="_self" >AuthService</a></code>
+
+                        </td>
+                    </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                    <div class="io-line">Defined in <a href="" data-line="10" class="link-to-prism">libs/ui-kits/main/src/lib/header/header.component.ts:10</a></div>
+                            </td>
+                        </tr>
+
+
+            </tbody>
+        </table>
+</section>
 
 </div>
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, OnInit } from &#x27;@angular/core&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {Component, OnInit} from &#x27;@angular/core&#x27;;
+import {AuthService} from &#x27;@agromanager/feature/api/auth&#x27;;
 
 @Component({
-  selector: &#x27;agromanager-header&#x27;,
-  templateUrl: &#x27;./header.component.html&#x27;,
-  styleUrls: [&#x27;./header.component.scss&#x27;]
+	selector: &#x27;agromanager-header&#x27;,
+	templateUrl: &#x27;./header.component.html&#x27;,
+	styleUrls: [&#x27;./header.component.scss&#x27;],
 })
 export class HeaderComponent implements OnInit {
+	constructor(public auth: AuthService) {}
 
-  constructor() { }
-
-  ngOnInit(): void {
-  }
-
+	ngOnInit(): void {}
 }
 </code></pre>
     </div>
@@ -260,9 +337,19 @@ export class HeaderComponent implements OnInit {
 					&lt;/a&gt;
 				&lt;/li&gt;
 				&lt;li&gt;
-					&lt;a routerLink&#x3D;&quot;/login&quot; mat-icon-button&gt;
-						&lt;mat-icon&gt;login&lt;/mat-icon&gt;
-					&lt;/a&gt;
+					&lt;div *ngIf&#x3D;&quot;auth.user$ | async; then logout; else login&quot;&gt;&lt;/div&gt;
+
+					&lt;ng-template #login&gt;
+						&lt;a routerLink&#x3D;&quot;/login&quot; mat-icon-button&gt;
+							&lt;mat-icon&gt;login&lt;/mat-icon&gt;
+						&lt;/a&gt;
+					&lt;/ng-template&gt;
+
+					&lt;ng-template #logout&gt;
+						&lt;a (click)&#x3D;&quot;auth.signOut()&quot; routerLink&#x3D;&quot;/&quot; mat-icon-button&gt;
+							&lt;mat-icon&gt;logout&lt;/mat-icon&gt;
+						&lt;/a&gt;
+					&lt;/ng-template&gt;
 				&lt;/li&gt;
 			&lt;/ul&gt;
 		&lt;/div&gt;
@@ -312,7 +399,7 @@ export class HeaderComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><mat-toolbar color="primary">	<mat-toolbar-row>		<a routerLink="/" mat-button>APP Logo</a>		<span class="example-spacer"></span>		<div fxLayout="row" fxLayoutAlign="end center">			<ul fxLayout="row" fxLayoutGap="20px">				<li>					<a routerLink="/settings" mat-icon-button>						<mat-icon>settings</mat-icon>					</a>				</li>				<li>					<a routerLink="/help" mat-icon-button>						<mat-icon>help_outline</mat-icon>					</a>				</li>				<li>					<a routerLink="/profile" mat-icon-button>						<mat-icon>person_outline</mat-icon>					</a>				</li>				<li>					<a routerLink="/login" mat-icon-button>						<mat-icon>login</mat-icon>					</a>				</li>			</ul>		</div>	</mat-toolbar-row></mat-toolbar></div>'
+        var COMPONENT_TEMPLATE = '<div><mat-toolbar color="primary">	<mat-toolbar-row>		<a routerLink="/" mat-button>APP Logo</a>		<span class="example-spacer"></span>		<div fxLayout="row" fxLayoutAlign="end center">			<ul fxLayout="row" fxLayoutGap="20px">				<li>					<a routerLink="/settings" mat-icon-button>						<mat-icon>settings</mat-icon>					</a>				</li>				<li>					<a routerLink="/help" mat-icon-button>						<mat-icon>help_outline</mat-icon>					</a>				</li>				<li>					<a routerLink="/profile" mat-icon-button>						<mat-icon>person_outline</mat-icon>					</a>				</li>				<li>					<div *ngIf="auth.user$ | async; then logout; else login"></div>					<ng-template #login>						<a routerLink="/login" mat-icon-button>							<mat-icon>login</mat-icon>						</a>					</ng-template>					<ng-template #logout>						<a (click)="auth.signOut()" routerLink="/" mat-icon-button>							<mat-icon>logout</mat-icon>						</a>					</ng-template>				</li>			</ul>		</div>	</mat-toolbar-row></mat-toolbar></div>'
     var COMPONENTS = [{'name': 'AboutPageComponent', 'selector': 'agromanager-about-page'},{'name': 'AnimalsPageComponent', 'selector': 'agromanager-animals-page'},{'name': 'AppComponent', 'selector': 'agromanager-root'},{'name': 'DashboardPageComponent', 'selector': 'agromanager-dashboard-page'},{'name': 'FooterComponent', 'selector': 'agromanager-footer'},{'name': 'HeaderComponent', 'selector': 'agromanager-header'},{'name': 'HelpPageComponent', 'selector': 'agromanager-help-page'},{'name': 'HomePageComponent', 'selector': 'agromanager-home-page'},{'name': 'LoginPageComponent', 'selector': 'agromanager-login-page'},{'name': 'NavbarComponent', 'selector': 'agromanager-navbar'},{'name': 'ProfilePageComponent', 'selector': 'agromanager-profile-page'},{'name': 'SettingsPageComponent', 'selector': 'agromanager-settings-page'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'HeaderComponent'};
