--- a/documentation/components/LoginPageComponent.html
+++ b/documentation/components/LoginPageComponent.html
@@ -121,6 +121,21 @@
     <h3 id="index">Index</h3>
     <table class="table table-sm table-bordered index-table">
         <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <h6><b>Properties</b></h6>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <ul class="index-list">
+                            <li>
+                                    <span class="modifier">Public</span>
+                                <a href="#auth">auth</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
 
                 <tr>
                     <td class="col-md-4">
@@ -151,7 +166,7 @@
             <tbody>
                 <tr>
                     <td class="col-md-4">
-<code>constructor(authService: <a href="../injectables/AuthService.html">AuthService</a>)</code>
+<code>constructor(auth: <a href="../injectables/AuthService.html">AuthService</a>)</code>
                     </td>
                 </tr>
                         <tr>
@@ -174,7 +189,7 @@
                                         </thead>
                                         <tbody>
                                                 <tr>
-                                                        <td>authService</td>
+                                                        <td>auth</td>
                                                   
                                                         <td>
                                                                         <code><a href="../injectables/AuthService.html" target="_self" >AuthService</a></code>
@@ -243,6 +258,40 @@
         </tbody>
     </table>
 </section>
+    <section>
+    
+        <h3 id="inputs">
+            Properties
+        </h3>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="auth"></a>
+                        <span class="name">
+                            <b>
+                                <span class="modifier">Public</span>
+                            auth</b>
+                            <a href="#auth"><span class="icon ion-ios-link"></span></a>
+                        </span>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Type : </i>        <code><a href="../injectables/AuthService.html" target="_self" >AuthService</a></code>
+
+                        </td>
+                    </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                    <div class="io-line">Defined in <a href="" data-line="10" class="link-to-prism">libs/feature/lazy/login/src/lib/login-page/login-page.component.ts:10</a></div>
+                            </td>
+                        </tr>
+
+
+            </tbody>
+        </table>
+</section>
 
 </div>
 
@@ -257,7 +306,7 @@ import {AuthService} from &#x27;@agromanager/feature/api/auth&#x27;;
 	styleUrls: [&#x27;./login-page.component.scss&#x27;],
 })
 export class LoginPageComponent implements OnInit {
-	constructor(private authService: AuthService) {}
+	constructor(public auth: AuthService) {}
 
 	ngOnInit(): void {}
 }
@@ -265,33 +314,29 @@ export class LoginPageComponent implements OnInit {
     </div>
 
     <div class="tab-pane fade " id="c-templateData">
-        <pre class="line-numbers"><code class="language-html">&lt;div class&#x3D;&quot;login-container&quot;&gt;
-	&lt;div class&#x3D;&quot;ui card login-card&quot;&gt;
-		&lt;div class&#x3D;&quot;content&quot;&gt;
-			&lt;form class&#x3D;&quot;ui form&quot;&gt;
-				&lt;div class&#x3D;&quot;two fields&quot;&gt;
-					&lt;div class&#x3D;&quot;field&quot;&gt;
-						&lt;label&gt;First Name&lt;/label&gt;
-						&lt;input type&#x3D;&quot;text&quot; name&#x3D;&quot;firstName&quot; placeholder&#x3D;&quot;First Name&quot; /&gt;
-					&lt;/div&gt;
-					&lt;div class&#x3D;&quot;field&quot;&gt;
-						&lt;label&gt;Last Name&lt;/label&gt;
-						&lt;input type&#x3D;&quot;text&quot; name&#x3D;&quot;lastName&quot; placeholder&#x3D;&quot;Last Name&quot; /&gt;
-					&lt;/div&gt;
-				&lt;/div&gt;
-				&lt;div class&#x3D;&quot;field&quot;&gt;
-					&lt;label&gt;Email&lt;/label&gt;
-					&lt;input type&#x3D;&quot;email&quot; name&#x3D;&quot;email&quot; placeholder&#x3D;&quot;Email&quot; /&gt;
-				&lt;/div&gt;
-				&lt;div class&#x3D;&quot;field&quot;&gt;
-					&lt;label&gt;Password&lt;/label&gt;
-					&lt;input type&#x3D;&quot;password&quot; name&#x3D;&quot;password&quot; placeholder&#x3D;&quot;Password&quot; /&gt;
-				&lt;/div&gt;
-				&lt;button class&#x3D;&quot;ui primary button login&quot; type&#x3D;&quot;submit&quot;&gt;Sign Up&lt;/button&gt;
-			&lt;/form&gt;
-		&lt;/div&gt;
-	&lt;/div&gt;
+        <pre class="line-numbers"><code class="language-html">&lt;div *ngIf&#x3D;&quot;auth.user$ | async; then authenticated; else guest&quot;&gt;
+	&lt;!-- template will replace this div --&gt;
 &lt;/div&gt;
+
+&lt;!-- User NOT logged in --&gt;
+&lt;ng-template #guest&gt;
+	&lt;mat-card&gt;
+		&lt;mat-card-title&gt;Login&lt;/mat-card-title&gt;
+		&lt;mat-card-content&gt;
+			&lt;button mat-raised-button color&#x3D;&quot;primary&quot;&gt;Login&lt;/button&gt;
+		&lt;/mat-card-content&gt;
+	&lt;/mat-card&gt;
+&lt;/ng-template&gt;
+
+&lt;!-- User logged in --&gt;
+&lt;ng-template #authenticated&gt;
+	&lt;div *ngIf&#x3D;&quot;auth.user$ | async as user&quot;&gt;
+		&lt;h3&gt;Howdy, {{ user.displayName }}&lt;/h3&gt;
+		&lt;img [src]&#x3D;&quot;user.photoURL&quot; /&gt;
+		&lt;p&gt;UID: {{ user.uid }}&lt;/p&gt;
+		&lt;button (click)&#x3D;&quot;auth.signOut()&quot;&gt;Logout&lt;/button&gt;
+	&lt;/div&gt;
+&lt;/ng-template&gt;
 </code></pre>
     </div>
 
@@ -340,7 +385,7 @@ export class LoginPageComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><div class="login-container">	<div class="ui card login-card">		<div class="content">			<form class="ui form">				<div class="two fields">					<div class="field">						<label>First Name</label>						<input type="text" name="firstName" placeholder="First Name" />					</div>					<div class="field">						<label>Last Name</label>						<input type="text" name="lastName" placeholder="Last Name" />					</div>				</div>				<div class="field">					<label>Email</label>					<input type="email" name="email" placeholder="Email" />				</div>				<div class="field">					<label>Password</label>					<input type="password" name="password" placeholder="Password" />				</div>				<button class="ui primary button login" type="submit">Sign Up</button>			</form>		</div>	</div></div></div>'
+        var COMPONENT_TEMPLATE = '<div><div *ngIf="auth.user$ | async; then authenticated; else guest">	<!-- template will replace this div --></div><!-- User NOT logged in --><ng-template #guest>	<mat-card>		<mat-card-title>Login</mat-card-title>		<mat-card-content>			<button mat-raised-button color="primary">Login</button>		</mat-card-content>	</mat-card></ng-template><!-- User logged in --><ng-template #authenticated>	<div *ngIf="auth.user$ | async as user">		<h3>Howdy, {{ user.displayName }}</h3>		<img [src]="user.photoURL" />		<p>UID: {{ user.uid }}</p>		<button (click)="auth.signOut()">Logout</button>	</div></ng-template></div>'
     var COMPONENTS = [{'name': 'AboutPageComponent', 'selector': 'agromanager-about-page'},{'name': 'AnimalsPageComponent', 'selector': 'agromanager-animals-page'},{'name': 'AppComponent', 'selector': 'agromanager-root'},{'name': 'DashboardPageComponent', 'selector': 'agromanager-dashboard-page'},{'name': 'FooterComponent', 'selector': 'agromanager-footer'},{'name': 'HeaderComponent', 'selector': 'agromanager-header'},{'name': 'HelpPageComponent', 'selector': 'agromanager-help-page'},{'name': 'HomePageComponent', 'selector': 'agromanager-home-page'},{'name': 'LoginPageComponent', 'selector': 'agromanager-login-page'},{'name': 'NavbarComponent', 'selector': 'agromanager-navbar'},{'name': 'ProfilePageComponent', 'selector': 'agromanager-profile-page'},{'name': 'SettingsPageComponent', 'selector': 'agromanager-settings-page'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'LoginPageComponent'};
