--- a/documentation/components/ProfilePageComponent.html
+++ b/documentation/components/ProfilePageComponent.html
@@ -121,6 +121,21 @@
     <h3 id="index">Index</h3>
     <table class="table table-sm table-bordered index-table">
         <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <h6><b>Properties</b></h6>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <ul class="index-list">
+                            <li>
+                                    <span class="modifier">Public</span>
+                                <a href="#auth">auth</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
 
                 <tr>
                     <td class="col-md-4">
@@ -151,15 +166,45 @@
             <tbody>
                 <tr>
                     <td class="col-md-4">
-<code>constructor()</code>
+<code>constructor(auth: <a href="../injectables/AuthService.html">AuthService</a>)</code>
                     </td>
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="8" class="link-to-prism">libs/feature/lazy/profile/src/lib/profile-page/profile-page.component.ts:8</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="9" class="link-to-prism">libs/feature/lazy/profile/src/lib/profile-page/profile-page.component.ts:9</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                            <div>
+                                    <b>Parameters :</b>
+                                    <table class="params">
+                                        <thead>
+                                            <tr>
+                                                <td>Name</td>
+                                                    <td>Type</td>
+                                                <td>Optional</td>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                                <tr>
+                                                        <td>auth</td>
+                                                  
+                                                        <td>
+                                                                        <code><a href="../injectables/AuthService.html" target="_self" >AuthService</a></code>
+                                                        </td>
+                                                  
+                                                    <td>
+                                                            No
+                                                    </td>
+                                                    
+                                                </tr>
+                                        </tbody>
+                                    </table>
+                            </div>
+                    </td>
+                </tr>
             </tbody>
         </table>
 </section>
@@ -213,31 +258,66 @@
         </tbody>
     </table>
 </section>
+    <section>
+    
+        <h3 id="inputs">
+            Properties
+        </h3>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="auth"></a>
+                        <span class="name">
+                            <b>
+                                <span class="modifier">Public</span>
+                            auth</b>
+                            <a href="#auth"><span class="icon ion-ios-link"></span></a>
+                        </span>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Type : </i>        <code><a href="../injectables/AuthService.html" target="_self" >AuthService</a></code>
+
+                        </td>
+                    </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                    <div class="io-line">Defined in <a href="" data-line="10" class="link-to-prism">libs/feature/lazy/profile/src/lib/profile-page/profile-page.component.ts:10</a></div>
+                            </td>
+                        </tr>
+
+
+            </tbody>
+        </table>
+</section>
 
 </div>
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, OnInit } from &#x27;@angular/core&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {Component, OnInit} from &#x27;@angular/core&#x27;;
+import {AuthService} from &#x27;@agromanager/feature/api/auth&#x27;;
 
 @Component({
-  selector: &#x27;agromanager-profile-page&#x27;,
-  templateUrl: &#x27;./profile-page.component.html&#x27;,
-  styleUrls: [&#x27;./profile-page.component.scss&#x27;]
+	selector: &#x27;agromanager-profile-page&#x27;,
+	templateUrl: &#x27;./profile-page.component.html&#x27;,
+	styleUrls: [&#x27;./profile-page.component.scss&#x27;],
 })
 export class ProfilePageComponent implements OnInit {
+	constructor(public auth: AuthService) {}
 
-  constructor() { }
-
-  ngOnInit(): void {
-  }
-
+	ngOnInit(): void {}
 }
 </code></pre>
     </div>
 
     <div class="tab-pane fade " id="c-templateData">
-        <pre class="line-numbers"><code class="language-html">&lt;p&gt;profile-page works!&lt;/p&gt;
+        <pre class="line-numbers"><code class="language-html">&lt;div *ngIf&#x3D;&quot;auth.user$ | async as user&quot;&gt;
+	&lt;h3&gt;Howdy, {{ user.displayName }}&lt;/h3&gt;
+	&lt;p&gt;UID: {{ user.uid }}&lt;/p&gt;
+&lt;/div&gt;
 </code></pre>
     </div>
 
@@ -273,7 +353,7 @@ export class ProfilePageComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><p>profile-page works!</p></div>'
+        var COMPONENT_TEMPLATE = '<div><div *ngIf="auth.user$ | async as user">	<h3>Howdy, {{ user.displayName }}</h3>	<p>UID: {{ user.uid }}</p></div></div>'
     var COMPONENTS = [{'name': 'AboutPageComponent', 'selector': 'agromanager-about-page'},{'name': 'AnimalsPageComponent', 'selector': 'agromanager-animals-page'},{'name': 'AppComponent', 'selector': 'agromanager-root'},{'name': 'DashboardPageComponent', 'selector': 'agromanager-dashboard-page'},{'name': 'FooterComponent', 'selector': 'agromanager-footer'},{'name': 'HeaderComponent', 'selector': 'agromanager-header'},{'name': 'HelpPageComponent', 'selector': 'agromanager-help-page'},{'name': 'HomePageComponent', 'selector': 'agromanager-home-page'},{'name': 'LoginPageComponent', 'selector': 'agromanager-login-page'},{'name': 'NavbarComponent', 'selector': 'agromanager-navbar'},{'name': 'ProfilePageComponent', 'selector': 'agromanager-profile-page'},{'name': 'SettingsPageComponent', 'selector': 'agromanager-settings-page'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'ProfilePageComponent'};
